@@ -1,3 +1,7 @@
+2022-01-02  Markus Gans  <guru.mail@muenster.de>
+	* FTermArea now checks if there is a given terminal position 
+	  in its area
+
 2021-12-30  Markus Gans  <guru.mail@muenster.de>
 	* Resetting the terminal state on resizing
 
